fix colorways in dark mode

--- a/src/60-variables.css
+++ b/src/60-variables.css
@@ -71,15 +71,23 @@
     	--muted-fg: var(--gray-2);
     	--faded-fg: var(--gray-7);
 
+		--plain-bg: var(--gray-11);
     	--info-bg: var(--blue-12);
     	--ok-bg: var(--green-12);
     	--bad-bg: var(--red-12);
     	--warn-bg: var(--yellow-12);
 
+		--plain-faded-fg: var(--blue-6);
+		--info-faded-fg: var(--blue-6);
+		--ok-faded-fg: var(--green-6);
+		--bad-faded-fg: var(--red-6);
+		--warn-faded-fg: var(--yellow-6);
+
     	--bg: var(--gray-12);
     	--box-bg: var(--gray-10);
     	--interactive-bg: var(--gray-8);
 
+		--plain-fg: (--blue-3);
     	--info-fg: var(--blue-3);
     	--ok-fg: var(--green-3);
     	--bad-fg: var(--red-3);
